--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,3 +1,3 @@
-@import "./base-page/base-page.less";
-@import "./home-page/home-page.less";
-@import "./product-page/product-page.less";
+@import "./base/base.less";
+@import "./home/home.less";
+@import "./product/product.less";
